[package]
name = "rmp"
version = "0.8.7"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Pure Rust MessagePack serialization implementation"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp"
readme = "README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]

[dependencies.num-traits]
path = "../num-traits"

[dependencies.nostd]
path = "../nostd"

[dependencies.byteorder]
version = "1"
default-features = false

[dev-dependencies]
quickcheck = "0.3"

[features]
default = []
# this feature is used for tests `cargo test --features=std`
std = ["nostd/std"]
